--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Covid Trends">
 <meta name="twitter:description" content="Visualising the exponential growth of the coronavirus.">
-<meta name="twitter:image" content="http://gerardbriscoe.github.io/corona/logo.png">
+<meta name="twitter:image" content="http://coronatrends.github.io/logo.png">
 <meta property="og:title" content="Coronavirus Trends">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://gerardbriscoe.github.io/corona/">
-<meta property="og:image" content="http://gerardbriscoe.github.io/corona/logo.png">
+<meta property="og:url" content="http://coronatrends.github.io/">
+<meta property="og:image" content="http://coronatrends.github.io/logo.png">
 <meta property="og:description" content="Visualising the exponential growth of the coronavirus.">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox/dist/jquery.fancybox.min.css">
 <style scoped>.example{margin:0}@media not all and (any-pointer:fine){.example{margin:0 0 1.0rem 0}}</style>
